--- a/index.html
+++ b/index.html
@@ -36,37 +36,35 @@
         </div>
     </section>
 
-    <section id="portfolio">
-        <div class="container-fluid p-0">
-            <div class="row justify-content-center">
-                <div class="col-8">
-                    <div class="row align-items-around">
-                        <div class="row justify-content-center">
-                            <div class="col-5">
-                                <div class="my-portfolio-filler"></div>
-                            </div>
+    <section class="container-fluid p-0">
+        <div class="row justify-content-center">
+            <div class="col-8">
+                <div id="portfolio" class="row align-items-around">
+                    <div class="row justify-content-center align-items-center">
+                        <div class="col-5">
+                            <div class="my-portfolio-filler"></div>
                         </div>
-                        <div class="row justify-content-center">
-                            <div class="col-4">
-                                <div class="my-portfolio-img-filler"></div>
-                            </div>
-                            <div class="col-4">
-                                <div class="my-portfolio-img-filler"></div>
-                            </div>
-                            <div class="col-4">
-                                <div class="my-portfolio-img-filler"></div>
-                            </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="my-portfolio-img-filler"></div>
                         </div>
-                        <div class="row justify-content-center">
-                            <div class="col-4">
-                                <div class="my-portfolio-img-filler"></div>
-                            </div>
-                            <div class="col-4">
-                                <div class="my-portfolio-img-filler"></div>
-                            </div>
-                            <div class="col-4">
-                                <div class="my-portfolio-img-filler"></div>
-                            </div>
+                        <div class="col-4">
+                            <div class="my-portfolio-img-filler"></div>
+                        </div>
+                        <div class="col-4">
+                            <div class="my-portfolio-img-filler"></div>
+                        </div>
+                    </div>
+                    <div class="row ">
+                        <div class="col-4">
+                            <div class="my-portfolio-img-filler"></div>
+                        </div>
+                        <div class="col-4">
+                            <div class="my-portfolio-img-filler"></div>
+                        </div>
+                        <div class="col-4">
+                            <div class="my-portfolio-img-filler"></div>
                         </div>
                     </div>
                 </div>
