--- a/index.html
+++ b/index.html
@@ -26,21 +26,19 @@
         </div>
     </header>
 
-    <section id="jumbo">
-        <div class="container-fluid p-0">
-            <div class="row justify-content-center">
+    <section class="container-fluid p-0">
+            <div class="row justify-content-center" id="jumbo">
                 <div class="col-4">
                     <div class="my-jumbo-filler"></div>
                 </div>
             </div>
-        </div>
     </section>
 
     <section class="container-fluid p-0">
         <div class="row justify-content-center">
-            <div class="col-8">
-                <div id="portfolio" class="row align-items-around">
-                    <div class="row justify-content-center align-items-center">
+            <div class="col-9">
+                <div class="row align-items-around" id="portfolio">
+                    <div class="row justify-content-center align-items-end">
                         <div class="col-5">
                             <div class="my-portfolio-filler"></div>
                         </div>
@@ -65,6 +63,33 @@
                         </div>
                         <div class="col-4">
                             <div class="my-portfolio-img-filler"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="container-fluid p-0">
+        <div class="row justify-content-center align-items-around" id="my-about-section">
+            <div class="col-8">
+                <div  class="row align-items-between" id="about">
+                    <div class="row justify-content-center align-items-end">
+                        <div class="col-5">
+                            <div class="my-about-filler"></div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="my-about-filler-text"></div>
+                        </div>
+                        <div class="col-6">
+                            <div class="my-about-filler-text"></div>
+                        </div>
+                    </div>
+                    <div class="row justify-content-center align-items-center">
+                        <div class="col-2">
+                            <div class="my-download-filler"></div>
                         </div>
                     </div>
                 </div>
