--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     </section>
 
     <section class="container-fluid p-0">
-        <div class="row justify-content-center align-items-around" id="my-about-section">
+        <div class="row justify-content-center align-items-around" id="about-section">
             <div class="col-8">
                 <div  class="row align-items-between" id="about">
                     <div class="row justify-content-center align-items-end">
@@ -90,6 +90,38 @@
                     <div class="row justify-content-center align-items-center">
                         <div class="col-2">
                             <div class="my-download-filler"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="container-fluid p-0">
+        <div class="row justify-content-center align-items-around" id="contact">
+            <div class="col-8">
+                <div class="row align-items-between">
+                    <div class="row justify-content-center align-items-start">
+                        <div class="col-5">
+                            <div class="my-contact-filler"></div>
+                        </div>
+                        <div class="col-12">
+                            <div class="my-contact-text-filler"></div>
+                        </div>
+                        <div class="col-12">
+                            <div class="my-contact-text-filler"></div>
+                        </div>
+                        <div class="col-12">
+                            <div class="my-contact-text-filler"></div>
+                        </div>
+                        <div class="col-12">
+                            <div class="my-contact-text-filler"></div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="my-contact-text-filler"></div>
                         </div>
                     </div>
                 </div>
