--- a/index.html
+++ b/index.html
@@ -5,128 +5,115 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <!-- FONT AWESOME CDN -->
+    <script src="https://kit.fontawesome.com/a98f007f43.js" crossorigin="anonymous"></script>
+
     <!-- CSS Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- CSS Custom Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
     <title>Bootstrap freelancer</title>
 </head>
 <body>
-    <header>
-        <div class="container-fluid p-0">
-            <div class="row gx-0">
-                <div class="col">
-                    <div class="my-header-filler"></div>
-                </div>
-                <div class="col">
-                    <div class="my-header-filler"></div>
-                </div>
+    <nav class="navbar navbar-expand-sm navbar-dark">
+        <div class="container-md">
+            <a href="#" class="navbar-brand">START BOOTSTRAP</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse ">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">PORTFOLIO</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">ABOUT</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">CONTACT</a>
+                    </li>
+                </ul>
             </div>
         </div>
-    </header>
+    </nav>
 
-    <section class="container-fluid p-0">
-            <div class="row justify-content-center" id="jumbo">
-                <div class="col-4">
-                    <div class="my-jumbo-filler"></div>
-                </div>
-            </div>
-    </section>
-
-    <section class="container-fluid p-0">
-        <div class="row justify-content-center">
-            <div class="col-9">
-                <div class="row align-items-around" id="portfolio">
-                    <div class="row justify-content-center align-items-end">
-                        <div class="col-5">
-                            <div class="my-portfolio-filler"></div>
-                        </div>
+    <section class="text-uppercase text-white text-center pt-md-5 pb-4 pt-4" id="jumbo">
+        <div class="container-md">
+            <div class="row">
+                <div class="col-12">
+                    <img src="img/avatar.svg" alt="img avatar">
+                    <h1 class="mb-3">start bootstrap</h1>
+                    <div class="d-flex justify-content-center align-items-center mb-2">
+                        <div class=" my-line border border-2 border-white rounded d-inline-block me-3"></div>
+                        <i class="fas fa-star"></i>
+                        <div class=" my-line border border-2 border-white rounded d-inline-block ms-3"></div>
                     </div>
-                    <div class="row">
-                        <div class="col-4">
-                            <div class="my-portfolio-img-filler"></div>
-                        </div>
-                        <div class="col-4">
-                            <div class="my-portfolio-img-filler"></div>
-                        </div>
-                        <div class="col-4">
-                            <div class="my-portfolio-img-filler"></div>
-                        </div>
-                    </div>
-                    <div class="row ">
-                        <div class="col-4">
-                            <div class="my-portfolio-img-filler"></div>
-                        </div>
-                        <div class="col-4">
-                            <div class="my-portfolio-img-filler"></div>
-                        </div>
-                        <div class="col-4">
-                            <div class="my-portfolio-img-filler"></div>
-                        </div>
-                    </div>
+                    <p>graphic artist - web designer - illustrator</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="container-fluid p-0">
-        <div class="row justify-content-center align-items-around" id="about-section">
-            <div class="col-8">
-                <div  class="row align-items-between" id="about">
-                    <div class="row justify-content-center align-items-end">
-                        <div class="col-5">
-                            <div class="my-about-filler"></div>
-                        </div>
+    <section class="text-uppercase text-center pt-5 pb-5" id="portfolio">
+        <div class="container-md">
+            <div class="row  gy-4">
+                <div class="col-12">
+                    <h1 class="mb-3">portfolio</h1>
+                    <div class="d-flex justify-content-center align-items-center ">
+                        <div class=" my-line border border-2 border-dark rounded d-inline-block me-3"></div>
+                        <i class="fas fa-star"></i>
+                        <div class=" my-line border border-2 border-dark rounded d-inline-block ms-3"></div>
                     </div>
-                    <div class="row">
-                        <div class="col-6">
-                            <div class="my-about-filler-text"></div>
-                        </div>
-                        <div class="col-6">
-                            <div class="my-about-filler-text"></div>
-                        </div>
-                    </div>
-                    <div class="row justify-content-center align-items-center">
-                        <div class="col-2">
-                            <div class="my-download-filler"></div>
-                        </div>
-                    </div>
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4 ">
+                    <img src="img/cabin.png" class="img-fluid" alt="img cabin">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <img src="img/cabin.png" class="img-fluid" alt="img cabin">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <img src="img/cabin.png" class="img-fluid" alt="img cabin">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <img src="img/cabin.png" class="img-fluid" alt="img cabin">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <img src="img/cabin.png" class="img-fluid" alt="img cabin">
+                </div>
+                <div class="col-sm-12 col-md-6 col-lg-4">
+                    <img src="img/cabin.png" class="img-fluid" alt="img cabin">
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="container-fluid p-0">
-        <div class="row justify-content-center align-items-around" id="contact">
-            <div class="col-8">
-                <div class="row align-items-between">
-                    <div class="row justify-content-center align-items-start">
-                        <div class="col-5">
-                            <div class="my-contact-filler"></div>
-                        </div>
-                        <div class="col-12">
-                            <div class="my-contact-text-filler"></div>
-                        </div>
-                        <div class="col-12">
-                            <div class="my-contact-text-filler"></div>
-                        </div>
-                        <div class="col-12">
-                            <div class="my-contact-text-filler"></div>
-                        </div>
-                        <div class="col-12">
-                            <div class="my-contact-text-filler"></div>
-                        </div>
+    <section class="text-white pt-5 pb-4 pt-md-5 pb-md-5" id="about">
+        <div class="container-md">
+            <div class="row justify-content-center gy-3">
+                <div class="col-12 ">
+                    <h1 class="text-uppercase text-center mb-3">about</h1>
+                    <div class="d-flex justify-content-center align-items-center m-2">
+                        <div class=" my-line border border-2 border-white rounded d-inline-block me-3"></div>
+                        <i class="fas fa-star"></i>
+                        <div class=" my-line border border-2 border-white rounded d-inline-block ms-3"></div>
                     </div>
-
-                    <div class="row">
-                        <div class="col-12">
-                            <div class="my-contact-text-filler"></div>
-                        </div>
-                    </div>
+                </div>
+                <div class="col-8 col-md-5">
+                    <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy customization</p>
+                </div>
+                <div class="col-8 col-md-5 ">
+                    <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or a graphic artist looking to share your projects, this template is the perfect starting point!</p>
+                </div>
+                <div class="col-12 text-center">
+                    <button type="button" class="btn btn-outline-light">
+                        <i class="fas fa-download"></i> Download
+                    </button>
                 </div>
             </div>
         </div>
     </section>
+
+    
 </body>
 </html>
