--- a/index.html
+++ b/index.html
@@ -114,6 +114,66 @@
         </div>
     </section>
 
-    
+    <section id="contact" class="pt-5 pb-4 pb-md-5">
+        <div class="container-md">
+            <div class="row">
+                <div class="col-12 ">
+                    <h1 class="text-uppercase text-center mb-3">contact me</h1>
+                    <div class="d-flex justify-content-center align-items-center m-2">
+                        <div class=" my-line border border-2 border-dark rounded d-inline-block me-3"></div>
+                        <i class="fas fa-star"></i>
+                        <div class=" my-line border border-2 border-dark rounded d-inline-block ms-3"></div>
+                    </div>
+                </div>
+                <div class="col-10 offset-1">
+                    <p class="border-2 border-bottom pb-3 mb-2">Name</p>
+                </div>
+                <div class="col-10 offset-1">
+                    <p class="border-2 border-bottom pb-3 mb-2">Email Address</p>
+                </div>
+                <div class="col-10 offset-1">
+                    <p class="border-2 border-bottom pb-3">Phone Number</p>
+                </div>
+                <div class="col-10 offset-1">
+                    <p class="border-2 border-bottom my-pb">Message</p>
+                </div>
+                <div class="col-10 offset-1">
+                    <button type="button" class="btn text-white my-send-btn">Send</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="text-center text-white">
+        <div class="container-md">
+            <div class="row">
+                <div class="col-12 col-md-4 ">
+                    <h5 class="text-uppercase">location</h5>
+                    <p>2215 John Daniel Drive Clark, MO 54243</p>
+                </div>
+                <div class="col-12 col-md-4">
+                    <h5 class="text-uppercase">around the web</h5>
+                    <i class="fab fa-facebook-f border rounded-circle ps-2 pe-2 pt-1 pb-1"></i>
+                    <i class="fab fa-google-plus-g"></i>
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-linkedin-in"></i>
+                </div>
+                <div class="col-12 col-md-4">
+                    <h5 class="text-uppercase">about freelancer</h5>
+                    <p>
+                        Freelance is a free to use, open source Bootstrap theme created by <span class="my-text-color">Start Bootstrap</span>.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+    <aside class="text-center text-white" id="my-aside">
+        <div class="row">
+            <div class="col-12">
+                <p class="fs-6">Copyright <i class="far fa-copyright"></i> Your Website 2019</p>
+            </div>
+        </div>
+    </aside>
 </body>
 </html>
