--- a/index.html
+++ b/index.html
@@ -70,19 +70,19 @@
                     <img src="img/cabin.png" class="img-fluid" alt="img cabin">
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <img src="img/cabin.png" class="img-fluid" alt="img cabin">
+                    <img src="img/cake.png" class="img-fluid" alt="img cake">
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <img src="img/cabin.png" class="img-fluid" alt="img cabin">
+                    <img src="img/circus.png" class="img-fluid" alt="img circus">
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <img src="img/cabin.png" class="img-fluid" alt="img cabin">
+                    <img src="img/game.png" class="img-fluid" alt="img game">
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <img src="img/cabin.png" class="img-fluid" alt="img cabin">
+                    <img src="img/safe.png" class="img-fluid" alt="img safe">
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <img src="img/cabin.png" class="img-fluid" alt="img cabin">
+                    <img src="img/submarine.png" class="img-fluid" alt="img submarine">
                 </div>
             </div>
         </div>
@@ -124,42 +124,31 @@
                         <i class="fas fa-star"></i>
                         <div class=" my-line border border-2 border-dark rounded d-inline-block ms-3"></div>
                     </div>
-                </div>
-                <div class="col-10 offset-1">
-                    <p class="border-2 border-bottom pb-3 mb-2">Name</p>
-                </div>
-                <div class="col-10 offset-1">
                     <p class="border-2 border-bottom pb-3 mb-2">Email Address</p>
-                </div>
-                <div class="col-10 offset-1">
                     <p class="border-2 border-bottom pb-3">Phone Number</p>
-                </div>
-                <div class="col-10 offset-1">
                     <p class="border-2 border-bottom my-pb">Message</p>
-                </div>
-                <div class="col-10 offset-1">
                     <button type="button" class="btn text-white my-send-btn">Send</button>
                 </div>
             </div>
         </div>
     </section>
 
-    <footer class="text-center text-white">
+    <footer class="text-center text-white pt-5 pb-4">
         <div class="container-md">
             <div class="row">
                 <div class="col-12 col-md-4 ">
-                    <h5 class="text-uppercase">location</h5>
+                    <h5 class="text-uppercase ">location</h5>
                     <p>2215 John Daniel Drive Clark, MO 54243</p>
                 </div>
-                <div class="col-12 col-md-4">
-                    <h5 class="text-uppercase">around the web</h5>
-                    <i class="fab fa-facebook-f border rounded-circle ps-2 pe-2 pt-1 pb-1"></i>
-                    <i class="fab fa-google-plus-g"></i>
-                    <i class="fab fa-twitter"></i>
-                    <i class="fab fa-linkedin-in"></i>
+                <div class="col-12 col-md-4" id="my-web-logo">
+                    <h5 class="text-uppercase mt-sm-5 mt-md-0">around the web</h5>
+                    <i class="fab fa-facebook-f border rounded-circle"></i>
+                    <i class="fab fa-google-plus-g border rounded-circle"></i>
+                    <i class="fab fa-twitter border rounded-circle"></i>
+                    <i class="fab fa-linkedin-in border rounded-circle"></i>
                 </div>
                 <div class="col-12 col-md-4">
-                    <h5 class="text-uppercase">about freelancer</h5>
+                    <h5 class="text-uppercase mt-sm-5 mt-md-0">about freelancer</h5>
                     <p>
                         Freelance is a free to use, open source Bootstrap theme created by <span class="my-text-color">Start Bootstrap</span>.
                     </p>
@@ -168,10 +157,10 @@
         </div>
     </footer>
 
-    <aside class="text-center text-white" id="my-aside">
+    <aside class="text-center text-white pt-4 pb-3" id="my-aside">
         <div class="row">
             <div class="col-12">
-                <p class="fs-6">Copyright <i class="far fa-copyright"></i> Your Website 2019</p>
+                <p>Copyright <i class="far fa-copyright"></i> Your Website 2019</p>
             </div>
         </div>
     </aside>
